--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ ext {
 
     libraryVersion = '1.0'
 
-    developerId = 'vivek'
+    developerId = 'exponentialrocket'
     developerName = 'Vivek Kejriwal'
     developerEmail = 'vivek.kej@gmail.com'
 
