--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ ext {
     bintrayRepo = 'myApplication2'
     bintrayName = 'myApplication2'   // Has to be same as your library module name
 
-    publishedGroupId = 'com.github.owc_android.myapplication.test'
+    publishedGroupId = 'com.github.exponentialrocket'
     libraryName = 'myApplication2'
     artifact = 'myApplication2'     // Has to be same as your library module name
 
