initial bintray upload

--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,15 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+            maven { url 'https://dl.bintray.com/exponentialrocket/maven' }
+        }
+    }
+
+    task clean(type: Delete) {
+        delete rootProject.buildDir
     }
 
 
 
-
-}
 
